Fixed mobile knob on mobile

--- a/scss/_themes.scss
+++ b/scss/_themes.scss
@@ -12,7 +12,8 @@ $themes: (
     link: $dark-main-color,
     hero-overlay: rgba(255, 255, 255, 0.4),
     nav: rgba(244, 244, 244, 0.7),
-    nav-links: #000,
+    nav-links: #fff,
+    nav-links-scroll: #000,
     arrow: url('../assets/img/arrow_black.png'),
     banner-bg: rgba(255, 215, 102, 0.7),
     banner-text: rgba(0, 0, 0, 0.7),
