--- a/scss/main.scss
+++ b/scss/main.scss
@@ -133,6 +133,7 @@
     justify-content: center;
     transform: translateY(0%);
     transition: transform 1s ease-in-out, background-color 0.5s ease-in-out;
+    // padding: 0 1rem;
 
     &.scrolled {
       background-color: themed('nav');
@@ -141,6 +142,18 @@
       left: 0;
       right: 0;
       width: 100%;
+      #nav-content {
+        #logo {
+          a {
+            color: themed('nav-links-scroll');
+          }
+        }
+        #nav-bar {
+          a {
+            color: themed('nav-links-scroll');
+          }
+        }
+      }
     }
 
     #nav-content {
@@ -173,16 +186,16 @@
       #nav-bar {
         display: flex;
         flex-direction: row;
-        gap: 1rem;
+        gap: 0.3rem;
         justify-content: flex-end;
         padding-top: 1rem;
 
         a {
-          font-size: 1.25rem;
+          font-size: 1.5rem;
           font-weight: 400;
           color: themed('nav-links');
           text-transform: uppercase;
-          padding: 1rem;
+          padding: 0.5rem;
 
           &.drop {
             @include keyframes(drop) {
