--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -16,6 +16,9 @@
       flex-direction: column;
       align-items: center;
       padding: 0;
+      .logo {
+        display: none;
+      }
       .toggle-container {
         padding-bottom: 0.75rem;
         .toggle {
@@ -101,13 +104,42 @@
           padding-top: 1rem;
         }
 
-        #nav-bar {
+        #nav-bar.container {
           flex-direction: row;
           align-items: center;
-
+          justify-content: space-evenly;
+          width: 100%;
+          // &.container {
+          margin: 0;
           a {
             font-size: 1rem;
-            padding: 0.5rem 0.7rem;
+            padding: 0.5rem 0;
+          }
+          // }
+        }
+        .toggle-container {
+          padding-bottom: 0.75rem;
+          .toggle {
+            // height: 1rem;
+            width: 3.5rem;
+            .knob {
+              // height: 1rem;
+              width: 1.7rem;
+              // border-radius: 0.5rem;
+              &::before {
+                height: 2.4rem;
+              }
+              .icon {
+                display: none;
+              }
+            }
+            &.active {
+              // background: $linear-gradient-2;
+              // box-shadow: 0 5px 15px $box-shadow-1;
+              .knob {
+                transform: translateX(1.75rem);
+              }
+            }
           }
         }
       }
